--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,5 @@
 <div class="message">
-<div class="upper-message">
+  <div class="upper-message">
     <div class="message-user">
     <!-- 投稿したユーザー名情報を出力する -->
       <%= message.user.name%>
@@ -7,7 +7,7 @@
     </div>
     <div class="message-date">
     <!-- 投稿した時刻を出力する -->
-      <%= message.created_at%>
+      <%= l message.created_at%>
 
     </div>
   </div>
